--- a/backend/package.json
+++ b/backend/package.json
@@ -14,8 +14,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "helmet": "^6.0.1",
-    "morgan": "^1.10.0"
+    "helmet": "^6.0.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
