--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "description": "A sample Express.js server",
   "main": "server.js",
   "scripts": {
+    "init": "node -e \"require('fs').copyFile('template.env', '.env', ()=>{});\"",
     "prod": "screen -S myserver cross-env NODE_ENV=production node server",
     "dev": "cross-env NODE_ENV=development nodemon server"
   },
